demoapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapi-deployment
  labels:
    app: demoapi
spec:
  replicas: 3 # number of replicas to create
  selector:
    matchLabels:
      app: demoapi
  template:
    metadata:
      labels:
        app: demoapi
    spec:
      containers:
      - name: demoapi-cont
        image: acrmatmanpoc.azurecr.io/demoapi:latest # replace with your web API image name
        imagePullPolicy: IfNotPresent # pull image only if it doesn't exist
        ports:
          - containerPort: 8090
            protocol: TCP
