demoapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapi-service
  labels:
    app: demoapi
spec:
  selector:
    app: demoapi
  ports:
  - name: http
    protocol: TCP
    port: 7861
    targetPort: 8090
  type: LoadBalancer
